Add file attachment

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formidable": "^3.5.2",
     "next": "15.2.2",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
